--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -1,9 +1,9 @@
 <body>
-<div class="text-light">
+<div class="text-light" *ngIf="listArticles">
     <div id="titre_page" class="text-center">
         <h1>Actualités</h1>
     </div>
-    <div class="container" *ngIf="listArticles">
+    <div class="container">
         <div class="row">
             <div class="row">
                 <div class="col-12 pb-5">
@@ -17,14 +17,14 @@
                                             <div class="position-relative">
                                                 <!--thumbnail img-->
                                                 <div class="ratio_left-cover-1 image-wrapper">
-                                                    <a routerLink="/articles/1">
+                                                    <a [routerLink]="['/articles/', listArticles[0].id]">
                                                         <img id="image1" class="img-fluid w-100"
                                                              src="data:image/webp;base64,{{listArticles[0].cover.content}}"
                                                              alt="Bootstrap news template">
                                                     </a>
                                                 </div>
                                                 <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
-                                                    <a routerLink="/articles/1">
+                                                    <a [routerLink]="['/articles/', listArticles[0].id]">
                                                         <h2 class="h3 post-title text-white my-1">{{listArticles[0].title}}</h2>
                                                     </a>
                                                     <div class="news-meta">
@@ -47,7 +47,7 @@
                                     <div class="card border-0 rounded-0 text-white overflow zoom">
                                         <div class="position-relative">
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a routerLink="/articles/2">
+                                                <a [routerLink]="['/articles/', listArticles[1].id]">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[1].cover.content}}"
                                                          alt="simple blog template bootstrap">
@@ -55,8 +55,8 @@
                                             </div>
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   routerLink="/articles/2">Lifestyle</a>
-                                                <a routerLink="/articles/2">
+                                                [routerLink]="['/articles/', listArticles[1].id]">Anime</a>
+                                                <a [routerLink]="['/articles/', listArticles[1].id]">
                                                     <h2 class="h5 text-white my-1">{{listArticles[1].title}}</h2>
                                                 </a>
                                             </div>
@@ -70,7 +70,7 @@
                                         <div class="position-relative">
                                             <!--thumbnail img-->
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a routerLink="/articles/3">
+                                                <a [routerLink]="['/articles/', listArticles[2].id]">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[2].cover.content}}"
                                                          alt="bootstrap templates for blog">
@@ -79,9 +79,9 @@
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <!-- category -->
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   routerLink="/articles/3">Motocross</a>
+                                                [routerLink]="['/articles/', listArticles[2].id]">Anime</a>
                                                 <!--title-->
-                                                <a routerLink="/articles/3">
+                                                <a [routerLink]="['/articles/', listArticles[2].id]">
                                                     <h2 class="h5 text-white my-1">{{listArticles[2].title}}</h2>
                                                 </a>
                                             </div>
@@ -95,7 +95,7 @@
                                         <div class="position-relative">
                                             <!--thumbnail img-->
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a routerLink="/articles/4">
+                                                <a [routerLink]="['/articles/', listArticles[3].id]">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[3].cover.content}}"
                                                          alt="bootstrap blog wordpress theme">
@@ -104,9 +104,9 @@
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <!-- category -->
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   routerLink="/articles/4">Fitness</a>
+                                                [routerLink]="['/articles/', listArticles[3].id]">Anime</a>
                                                 <!--title-->
-                                                <a routerLink="/articles/4">
+                                                <a [routerLink]="['/articles/', listArticles[3].id]">
                                                     <h2 class="h5 text-white my-1">{{listArticles[3].title}}</h2>
                                                 </a>
                                             </div>
@@ -120,7 +120,7 @@
                                         <div class="position-relative">
                                             <!--thumbnail img-->
                                             <div class="ratio_right-cover-2 image-wrapper">
-                                                <a routerLink="/articles/5">
+                                                <a [routerLink]="['/articles/', listArticles[4].id]">
                                                     <img class="img-fluid"
                                                          src="data:image/webp;base64,{{listArticles[4].cover.content}}"
                                                          alt="blog website templates bootstrap">
@@ -129,9 +129,9 @@
                                             <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                                 <!-- category -->
                                                 <a class="p-1 badge badge-primary rounded-0"
-                                                   routerLink="/articles/5">Adventure</a>
+                                                [routerLink]="['/articles/', listArticles[4].id]">Anime</a>
                                                 <!--title-->
-                                                <a routerLink="/articles/5">
+                                                <a [routerLink]="['/articles/', listArticles[4].id]">
                                                     <h2 class="h5 text-white my-1">{{listArticles[4].title}}</h2>
                                                 </a>
                                             </div>
@@ -146,9 +146,9 @@
             <a *ngFor="let article of listArticlesNext" id="featuretteBlock">
                 <hr class="featurette-divider">
                 <div class="row featurette" routerLink="/articles/{{article.id}}">
-                    <div class="col-md-7 order-md-2">
-                        <h2 class="featurette-heading">{{article.title}}</h2>
-                        <div class="lead" id="mainContent" [innerHTML]="article.body | safeHtml"></div>
+                    <div class="col-md-6 order-md-2">
+                        <h2 id="articleTitle" class="featurette-heading">{{article.title}}</h2>
+                        <!--<div class="lead" id="mainContent" [innerHTML]="article.body | safeHtml"></div>-->
                     </div>
                     <div class="col-md-5 order-md-1">
                         <img
