--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -28,7 +28,7 @@
             <div class="input-group mb-3" id="searchBlock">
 
                 <ng-template #rt let-r="result" let-t="term">
-                    <img [src]="r.cover" class="mr-1" style="width: 16px">
+                    <img [src]="r.imgUrl" class="mr-1" style="width: 16px">
                     <ngb-highlight [result]="r.title" [term]="t"></ngb-highlight>
                 </ng-template>
                 <input id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue"
