--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -56,13 +56,14 @@ body {
     line-height: 1.5em;
     color: #aaa;
 }
-
+#mainContainer {
+    padding-top: 2vh;
+    margin-bottom: 2vh;
+}
 
 .container {
     background-color: #2e3032;
     border-radius: 4px;
-
-    margin-top: 4%;
 }
 
 #carousel, #navigation {
@@ -141,3 +142,129 @@ label {
 .col, .col-sm, .col-md {
 
 }
+
+.container .anime .card-title{
+    color: white;
+    padding: 2px;
+    border-radius: 5px;
+}
+.container .anime{
+    max-width: 50vw;
+}
+.container .anime .card{
+    margin-top: 2vh;
+    width: 15vw;
+    background-color: rgba(40, 43, 48, .75);
+}
+
+.container .anime .card:hover{
+    background-color: rgba(9, 124, 231, 0.75);
+}
+.container .anime .card-img-top{
+    height: 30vh!important;
+    object-fit: cover;
+    opacity: 0.6;
+}
+
+
+
+
+
+
+
+
+
+body{
+    background-color: rgba(40, 43, 48, .75);
+}
+.img-fluid {
+    width: 262px;
+    height: 226px;
+}
+#image1 {
+    height: 460px;
+}
+#articles {
+    border-radius: 5px;
+    width: 75vw;
+    margin: auto;
+}
+#articleList {
+    margin-top: 2vh;
+}
+#article {
+    background-color: rgba(40, 43, 48, .95);
+    margin-bottom: 1vh;
+    box-shadow: 5px 8px 18px 3px rgba(0,0,0,0.50);
+    border-radius: 5px;
+}
+
+#body p{
+    padding: .5vw;
+    color: white;
+}
+
+#photo {
+    width: 100%;
+    height: 18vh;
+}
+#parent {
+    display: flex;
+}
+
+#infos {
+    flex-grow: 1;
+}
+
+
+.b-0 {
+    bottom: 0;
+}
+.bg-shadow {
+    background: rgba(76, 76, 76, 0);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(179, 171, 171, 0)), color-stop(49%, rgba(48, 48, 48, 0.37)), color-stop(100%, rgba(19, 19, 19, 0.8)));
+    background: linear-gradient(to bottom, rgba(179, 171, 171, 0) 0%, rgba(48, 48, 48, 0.71) 49%, rgba(19, 19, 19, 0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
+}
+.top-indicator {
+    right: 0;
+    top: 1rem;
+    bottom: inherit;
+    left: inherit;
+    margin-right: 1rem;
+}
+.overflow {
+    position: relative;
+    overflow: hidden;
+}
+.zoom img {
+    transition: all 0.2s linear;
+}
+.zoom:hover img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.featurette-divider {
+    border-color: #868686;
+    width: 50vw;
+}
+.articleImage {
+    margin-top: 1vh;
+    width: 23vw;
+    height: 23vh;
+}
+.featurette:hover{
+    background-color: #11428D;
+    border-radius: 1vh;
+    cursor: pointer;
+}
+
+.img-fluid{
+    min-width: 100%;
+}
+
+#articleTitle {
+    margin-left: 2vw;
+}
+
