--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class=" text-light text-center">
         <h3> LES LISTES DU MOMENTS </h3>
     </div>
-    <div class="row">
+    <div class="row" *ngIf="topLists!== undefined">
         <div class="col-5">
             <input hidden type="radio" name="carousel-control" id="button_1" checked/>
             <input hidden type="radio" name="carousel-control" id="button_2"/>
@@ -68,23 +68,18 @@
 
 <!-- ANIMéS DU MOMENT -->
 <div class="container">
-
     <div class=" text-light text-center">
         <h3> TOP DES SORTIES </h3>
     </div>
     <div>
-
-
-
-
-        <div class="container anime">
+        <div class="container anime" *ngIf="animeList!== undefined">
             <div class="row">
-                <div *ngFor="let anime of imageObject" class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4">
+                <div *ngFor="let anime of animeList" class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4">
                     <a [routerLink]="['/animes', anime.id]">
                         <div class="card">
-                            <img  src="{{anime.content}}" class="card-img-top" alt="one piece png">
+                            <img  src="{{anime.imgUrl}}" class="card-img-top" alt="one piece png">
                             <div class="card-img-overlay">
-                                <h5 class="card-title">{{anime.name}}</h5>
+                                <h5 class="card-title">{{anime.title}}</h5>
                             </div>
                         </div>
                     </a>
@@ -94,13 +89,11 @@
         </div>
 </div>
 <div class="container">
-
     <div class=" text-light text-center">
         <h3> ACTUALITÉ </h3>
     </div>
 </div>
-
-    <div class="container">
+    <div class="container" *ngIf="listArticles!== undefined">
         <div class="row">
             <div class="row">
                 <div class="col-12 pb-5">
