--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -1,4 +1,4 @@
-<div id="container">
+<div *ngIf="anime !== undefined" id="container">
     <div class="row box" id="page">
         <div class="col-lg-3 col-md-2 col-sm-2 col-12" id="imgPlace">
             <img src="{{anime.imgUrl}}" class="img-fluid" id="cover" alt="">
@@ -40,11 +40,6 @@
                     </a>
                 </div>
             </div>
-
-           <!-- <div class="row">
-                <p class="genreTag">Genres: {{genres.toString()}}</p>
-                <p>tag: tag1, tag2, tag3</p>
-            </div>-->
             <div class="row">
                 <h1>Synopsis</h1>
                 <p>{{ anime.synopsis }}</p>
