--- a/src/app/lists/lists.component.css
+++ b/src/app/lists/lists.component.css
@@ -16,7 +16,7 @@ p {
 
 }
 
-.imgsDiv{
+.imagesDiv{
     margin: 0;
     padding: 0;
 }
@@ -50,7 +50,7 @@ p {
     color: white;
 }
 
-.fourImgs{
+.fourImages{
     width:4vw;
     height: 7.5vh;
 }
@@ -71,7 +71,7 @@ p {
 
 @media screen and (max-width: 576px) {
 
-    .fourImgs{
+    .fourImages{
         width:10vw;
         height: 6vh;
     }
@@ -116,7 +116,7 @@ p {
 
 @media screen and (max-width: 768px) and (min-width: 576px) {
 
-    .fourImgs{
+    .fourImages{
         width:8vw;
         height: 6vh;
     }
@@ -168,7 +168,7 @@ p {
     }
 
 
-    .fourImgs{
+    .fourImages{
         width:4vw;
         height: 6vh;
     }
@@ -207,7 +207,7 @@ p {
     }
 
 
-    .fourImgs{
+    .fourImages{
         width:6vw;
         height: 6vh;
     }
