--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -2,21 +2,20 @@
     <button class="btn btn-light" [routerLink]="['/list-create']">Create a new list</button>
 </div>
 <div class="row" id="rowList" *ngIf="listsImages!== undefined">
-    <div *ngFor="let list of lists; let i = index" class="col-lg-5 col-md-6 col-12" id="list" >
+    <div *ngFor="let list of lists; let i = index" class="col-lg-5 col-md-6 col-12" id="list">
         <a [routerLink]="['/lists', list.id]" id="boxLink">
             <div class=" list col-12 row">
-                <div class="col-xl-3 col-lg-3 col-md-4 col-3 row imgsDiv" id="imgDesc">
-                        <div *ngIf="listsImages[i].length<4" class="containerImg" >
-                            <div class="imgDiv">
-                                <img src="{{listsImages[i][0]}}"  alt="" class="oneImg">
-                            </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-3 row imagesDiv" id="imgDesc">
+                    <div *ngIf="listsImages[i].length<4" class="containerImg">
+                        <div class="imgDiv">
+                            <img src="{{listsImages[i][0]}}" alt="" class="oneImg">
                         </div>
-
-                        <div *ngIf="listsImages[i].length==4" class=" containerImg" >
-                            <div *ngFor="let listImage of listsImages[i]; let j=index"  class="imgDiv">
-                                <img src="{{listImage}}" class="" alt="" class="fourImgs">
-                            </div>
+                    </div>
+                    <div *ngIf="listsImages[i].length==4" class=" containerImg">
+                        <div *ngFor="let listImage of listsImages[i]; let j=index" class="imgDiv">
+                            <img src="{{listImage}}" alt="4 images together" class="fourImages">
                         </div>
+                    </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 col-6">
                     <a [routerLink]="['/lists', list.id]" id="nameList">{{ list.name }}</a>
